# minishell

./: CMakeLists.txt  Makefile  README.MD  a.out  file1  main.c  minishell  script  tester.c  tester1.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
includes/: dynamic_array.h  minishell.h
srcs/: dynamic_array.c  dynamic_array_utils.c  execute.c  ft_command.c  get_env_by_key.c  init_all.c  main.c
srcs/commands/: bin_commands.c  error_handler.c  ft_cd.c  ft_cd_utils.c  ft_echo.c  ft_env.c  ft_execution.c  ft_exit.c  ft_export.c  ft_export_print_sort_env.c  ft_export_utils.c  ft_pwd.c  ft_unset.c  pipes.c  pipes2.c  pipes2_utils.c  pipes_normal.c  pipes_utils.c  pipes_utils2.c  signals_handler.c
srcs/libft/: Makefile  ft_is_equal.c  ft_perror.c  ft_realloc.c  ft_setsplit.c  ft_strcmp.c  libft.a.tN4Q8H  libft.h
srcs/parser/: a.out  check_controls.c  check_env.c  check_slash.c  ft_realloc_args.c  ft_strjoin_free.c  ft_strjoinchar.c  get_controls.c  get_env.c  get_in_quotes.c  get_input.c  get_word.c  parse_line.c  parser_q.c
tests/: a.out  dup_dup2.c  dynamic_array.c  execv_test.c  ft_perror.c  ft_strcmp.c  is_directory.c  pipe.c  pipes_test.c  redir.c  start.c  test2.c  test_realloc.c  test_signals.c
